unpackaged/main/default/objects/GT_Membership__c/GT_Membership__c.object-meta.xml
<CustomObject>
    <label>Membership</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>