unpackaged/main/default/objects/GT_Membership__c/fields/CC_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>CC_Project_Manager__c</fullName>
    <label>CC Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cassandra Zwick</fullName>
                <isActive>false</isActive>
                <label>Cassandra Zwick</label>
            </value>
            <value>
                <fullName>Gina Carroll</fullName>
            </value>
            <value>
                <fullName>Juanita Timney</fullName>
            </value>
            <value>
                <fullName>Katie Lillie</fullName>
            </value>
            <value>
                <fullName>Kayleigh Fortuna</fullName>
                <isActive>false</isActive>
                <label>Kayleigh Fortuna</label>
            </value>
            <value>
                <fullName>Lacey Hull</fullName>
            </value>
            <value>
                <fullName>Lisa Gebhart</fullName>
                <isActive>false</isActive>
                <label>Lisa Gebhart</label>
            </value>
            <value>
                <fullName>Lisandra Fernandez</fullName>
            </value>
            <value>
                <fullName>Oswin Chackochan</fullName>
            </value>
            <value>
                <fullName>Stephanie Naida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>