unpackaged/main/default/objects/GT_Membership__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sean Nagle</fullName>
            </value>
            <value>
                <fullName>Andrew Callen</fullName>
                <isActive>false</isActive>
                <label>Andrew Callen</label>
            </value>
            <value>
                <fullName>Jennifer Spencer</fullName>
                <isActive>false</isActive>
                <label>Jennifer Spencer</label>
            </value>
            <value>
                <fullName>John Boy</fullName>
                <isActive>false</isActive>
                <label>John Boy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>