unpackaged/main/default/objects/GT_Membership__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amy Ziccarelli</fullName>
            </value>
            <value>
                <fullName>Dabra Watters</fullName>
            </value>
            <value>
                <fullName>Jamie Brosmore</fullName>
                <isActive>false</isActive>
                <label>Jamie Brosmore</label>
            </value>
            <value>
                <fullName>Jessica Bodner</fullName>
            </value>
            <value>
                <fullName>Michael Ewell</fullName>
            </value>
            <value>
                <fullName>Stephanie Specht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>