unpackaged/main/default/objects/GT_Membership__c/fields/GES_AE_Phone_Auto__c.field-meta.xml
<CustomField>
    <fullName>GES_AE_Phone_Auto__c</fullName>
    <formula>IF((TEXT(GES_Account_Executive__c) == &quot;John Boy&quot;),&quot;412-208-2275&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES AE Phone</label>
    <type>Text</type>
</CustomField>