unpackaged/main/default/objects/GT_Membership__c/fields/Membership_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Name__c</fullName>
    <label>Membership Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>