unpackaged/main/default/objects/GT_Membership__c/fields/Membership_Paid__c.field-meta.xml
<CustomField>
    <fullName>Membership_Paid__c</fullName>
    <label>Membership Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>