unpackaged/main/default/objects/GT_Membership__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budget Cut</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Exhibit Space Sold Out</fullName>
            </value>
            <value>
                <fullName>Influenza Outbreak</fullName>
            </value>
            <value>
                <fullName>Product Owner Decision</fullName>
            </value>
            <value>
                <fullName>Show Provider Cancelled</fullName>
            </value>
            <value>
                <fullName>Strategy Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>