unpackaged/main/default/objects/GT_Membership__c/recordTypes/GT_Membership_CC.recordType-meta.xml
<RecordType>
    <fullName>GT_Membership_CC</fullName>
    <active>true</active>
    <label>GT Membership CC</label>
</RecordType>